refactor(blen): 重构部分代码并优化性能
- 移除不必要的库和注释
- 添加 serialVersionUID 字段以优化序列化
- 使用 Map.copyOf() 替代手动创建不可变 Map
- 替换 JsonUtils 为 Jsons 以统一 JSON 处理
- 优化部分代码结构以提高可读性和性能